--- a/requirements.txt
+++ b/requirements.txt
@@ -1,18 +1,16 @@
 pyrogram==2.0.106
 tgcrypto==1.2.5
 motor==3.3.2
+pymongo==4.6.1
 aiohttp==3.9.1
 aiofiles==23.2.1
-gdown==5.1.0
 flask==3.0.0
-Pillow==10.1.0
-pymongo==4.6.1
 python-dotenv==1.0.0
-PyPDF2==3.0.1
+Pillow==10.1.0
 pdf2image==1.16.3
-ffmpeg-python==0.2.0
+mutagen==1.47.0
+moviepy==1.0.3
+gdown==5.1.0
 requests==2.31.0
 beautifulsoup4==4.12.2
-httpx==0.25.2
-dnspython==2.4.2
 apscheduler==3.10.4
