--- a/requirements.txt
+++ b/requirements.txt
@@ -7,10 +7,9 @@ aiofiles==23.2.1
 flask==3.0.0
 python-dotenv==1.0.0
 Pillow==10.1.0
-pdf2image==1.16.3
 mutagen==1.47.0
-moviepy==1.0.3
 gdown==5.1.0
 requests==2.31.0
 beautifulsoup4==4.12.2
 apscheduler==3.10.4
+dnspython==2.4.2
